# karpathy-rnns-repro

./: .gitignore  LICENSE  README.md  backward_comparison.py  generate_sample_text.py  generate_training_chart.py  gt_rnn.py  karpathy_lstm.py  karpathy_model.py  load_data_test.py  load_dataset.py  main.py  meta.py  next_byte_dataset.py  next_byte_tokenenizer.py  next_byte_tokenizer.py  persistence.py  pyproject.toml  run_tests.sh  shakespeare.py  train_rnn.py  worklog.txt
experiments/gilesthomas.com/data/: SOURCE.md  build.py  input.txt
experiments/paul-graham/data/: SOURCE.md  download.py
experiments/paul-graham/runs/karpathy-params-run/: model.json
experiments/paul-graham/runs/larger-model-as-more-data/: train.json
experiments/post-itself/data/: input.txt
experiments/post-itself/runs/small-model/: model.json  train.json
experiments/shakespeare/data/: SOURCE.md
experiments/shakespeare/runs/initial-run/: train.json
experiments/shakespeare/runs/karpathy-params-run/: model.json  train.json
experiments/war-and-peace/data/: SOURCE.md
experiments/war-and-peace/runs/karpathy-params-run/: train.json
templates/: training_run.html
tests/: test_next_byte_dataset.py  test_train_rnn.py
