[project]
name = "karpathy-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "click>=8.2.1",
    "ipython>=9.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "packaging>=25.0",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
